force-app/main/default/objects/Account/fields/FidNbrJoursDepuisEntreeFid__c.field-meta.xml
<CustomField>
    <fullName>FidNbrJoursDepuisEntreeFid__c</fullName>
    <label>Date d’entrée dans le programme fidélité</label>
    <type>Date</type>
</CustomField>