force-app/main/default/objects/Account/fields/FidNbrPrimesBilletterieRestantes__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPrimesBilletterieRestantes__c</fullName>
    <label>Nombre de primes billetterie restantes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>