force-app/main/default/objects/Account/fields/FidNbrPrimesConfiserieRestantes__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPrimesConfiserieRestantes__c</fullName>
    <label>Nombre de primes confiserie restantes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>