force-app/main/default/objects/Account/fields/FidNbrPtsEarnes30jours__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsEarnes30jours__c</fullName>
    <label>Nbr de pts earnés sur les 30 dern jours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>