force-app/main/default/objects/Account/fields/FidNbrPtsEarnes6mois__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsEarnes6mois__c</fullName>
    <label>Nbr de pts earnés sur les 6 dern mois</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>