force-app/main/default/objects/Account/fields/FidNbrPtsTransfoBilletterie30jours__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsTransfoBilletterie30jours__c</fullName>
    <label>Nbr de pts billet transf 30 dern jours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>