force-app/main/default/objects/Account/fields/FidNbrPtsTransfoBilletterie6Mois__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsTransfoBilletterie6Mois__c</fullName>
    <label>Nbr de pts billet transf 6 dern mois</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>