force-app/main/default/objects/Account/fields/FidNbrPtsTransfoConfiserie12Mois__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsTransfoConfiserie12Mois__c</fullName>
    <label>Nbr de pts confis transf 12 dern mois</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>