force-app/main/default/objects/Account/fields/FidNbrPtsTransfoConfiserie1Mois__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsTransfoConfiserie1Mois__c</fullName>
    <label>Nbr de pts confis transf 30 dern jours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>