force-app/main/default/objects/Account/fields/FidNbrPtsTransfoProduitsCult30jours__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsTransfoProduitsCult30jours__c</fullName>
    <label>Nbr pts prod cult transf 30 dern jours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>