force-app/main/default/objects/Account/fields/FidNbrPtsTransfoProduitsCult3Mois__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsTransfoProduitsCult3Mois__c</fullName>
    <label>Nbr pts prod cult transf 3 dern mois</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>