force-app/main/default/objects/Account/fields/FidNbrPtsTransformes30jours__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsTransformes30jours__c</fullName>
    <label>Nbr de pts transf sur les 30 dern jours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>