force-app/main/default/objects/Account/fields/FidNbrPtsTransformes6mois__c.field-meta.xml
<CustomField>
    <fullName>FidNbrPtsTransformes6mois__c</fullName>
    <label>Nbr de pts transf sur les 6 der mois</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>