force-app/main/default/objects/Account/fields/FidNumeroDernCarteEditee__c.field-meta.xml
<CustomField>
    <fullName>FidNumeroDernCarteEditee__c</fullName>
    <label>Numéro de la dernière Carte éditée</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>