force-app/main/default/objects/Account/fields/FidNumeroUIParrain__c.field-meta.xml
<CustomField>
    <fullName>FidNumeroUIParrain__c</fullName>
    <label>Numéro d&#39;UI du parrain</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>