force-app/main/default/objects/Account/fields/FidSoldePoints__c.field-meta.xml
<CustomField>
    <fullName>FidSoldePoints__c</fullName>
    <label>Solde de points à date</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>