force-app/main/default/objects/Account/fields/FidStatutDernCarteFid__c.field-meta.xml
<CustomField>
    <fullName>FidStatutDernCarteFid__c</fullName>
    <label>Statut der carte fid (carte active/dés)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>