force-app/main/default/objects/Account/fields/FidTransformPtsKdo12Mois__c.field-meta.xml
<CustomField>
    <fullName>FidTransformPtsKdo12Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfo pts sur cat Kdo 12 derniers mois</label>
    <type>Checkbox</type>
</CustomField>