force-app/main/default/objects/Account/fields/FidTransformPtsKdo3Mois__c.field-meta.xml
<CustomField>
    <fullName>FidTransformPtsKdo3Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfo pts sur cat Kdo 3 derniers mois</label>
    <type>Checkbox</type>
</CustomField>