force-app/main/default/objects/Account/fields/FidTransformPtsKdo6Mois__c.field-meta.xml
<CustomField>
    <fullName>FidTransformPtsKdo6Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfo pts sur cat Kdo 6 derniers mois</label>
    <type>Checkbox</type>
</CustomField>