force-app/main/default/objects/Account/fields/FidTypeDernCarteFid__c.field-meta.xml
<CustomField>
    <fullName>FidTypeDernCarteFid__c</fullName>
    <label>Type dernière carte fidélité (UGC+/UI+)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UGC+</fullName>
            </value>
            <value>
                <fullName>UI+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>