force-app/main/default/objects/Account/fields/IconeAbonne__c.field-meta.xml
<CustomField>
    <fullName>IconeAbonne__c</fullName>
    <formula>IF (NOT( ISNULL ( NoCarteUI__c )), IMAGE(&quot;/resource/1498495303000/Iconeabonne&quot;, &quot;.png&quot;), &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>..</label>
    <type>Text</type>
</CustomField>