force-app/main/default/objects/Account/fields/IconeBloctel__c.field-meta.xml
<CustomField>
    <fullName>IconeBloctel__c</fullName>
    <description>Si Ne pas appeler est coché alors l&#39;icone BlocTel apparaît.</description>
    <formula>IF(Bloctel__c   , IMAGE(&quot;/resource/1505461302000/IconeBloctel&quot;,&quot;60,60&quot;),&quot; &quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>....</label>
    <type>Text</type>
</CustomField>