force-app/main/default/objects/Account/fields/IconeNPAIEmail__c.field-meta.xml
<CustomField>
    <fullName>IconeNPAIEmail__c</fullName>
    <description>Quand la case NPAI_Email est cochée alors l&#39;icône NPAIEmail apparaît</description>
    <formula>IF( NPAIEMAIL__c  , IMAGE(&quot;/resource/1506332041000/IconeNPAIEmail?isdtp=p1&quot;,&quot;60,60&quot;),&quot; &quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.....</label>
    <type>Text</type>
</CustomField>