force-app/main/default/objects/Account/fields/IconePND__c.field-meta.xml
<CustomField>
    <fullName>IconePND__c</fullName>
    <description>Si PND adresse est cochée alors l&#39;icone apparaît</description>
    <formula>IF(PNDADRESSE__c ,IMAGE(&quot;/resource/1506359427000/IconePND?isdtp=p1&quot;,&quot;60,60&quot;),&quot; &quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>...</label>
    <type>Text</type>
</CustomField>