force-app/main/default/objects/Account/fields/ID_parrain__c.field-meta.xml
<CustomField>
    <fullName>ID_parrain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parrain</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>comptes parrainés</relationshipLabel>
    <relationshipName>comptes_parraines</relationshipName>
    <type>Lookup</type>
</CustomField>