force-app/main/default/objects/Account/fields/IdMonCompte__c.field-meta.xml
<CustomField>
    <fullName>IdMonCompte__c</fullName>
    <label>Id MonCompte</label>
    <length>20</length>
    <type>Text</type>
</CustomField>