force-app/main/default/objects/Account/fields/Immeuble__c.field-meta.xml
<CustomField>
    <fullName>Immeuble__c</fullName>
    <label>Immeuble</label>
    <length>23</length>
    <type>Text</type>
</CustomField>