force-app/main/default/objects/Account/fields/InvAParticipe6DerniersMois__c.field-meta.xml
<CustomField>
    <fullName>InvAParticipe6DerniersMois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A part à un jeu-concours au cours 6 DM</label>
    <type>Checkbox</type>
</CustomField>