force-app/main/default/objects/Account/fields/InvDateDernEvenementVu__c.field-meta.xml
<CustomField>
    <fullName>InvDateDernEvenementVu__c</fullName>
    <label>Date dernier événement AV/Label vu</label>
    <type>Date</type>
</CustomField>