force-app/main/default/objects/Account/fields/InvEmailAccompaFrequent6Mois__c.field-meta.xml
<CustomField>
    <fullName>InvEmailAccompaFrequent6Mois__c</fullName>
    <label>Email accomp AV/Label le + fréq 6 DM</label>
    <length>80</length>
    <type>Text</type>
</CustomField>