force-app/main/default/objects/Account/fields/InvNbrInvitations6Mois__c.field-meta.xml
<CustomField>
    <fullName>InvNbrInvitations6Mois__c</fullName>
    <label>Nbr inv AV/Label accep 6 DM</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>