force-app/main/default/objects/Account/fields/InvNomAccompFrequent6Mois__c.field-meta.xml
<CustomField>
    <fullName>InvNomAccompFrequent6Mois__c</fullName>
    <label>Nom accomp AV/Label le + fréq 6 DM</label>
    <length>80</length>
    <type>Text</type>
</CustomField>