force-app/main/default/objects/Account/fields/InvPrenomAccompFrequent6Mois__c.field-meta.xml
<CustomField>
    <fullName>InvPrenomAccompFrequent6Mois__c</fullName>
    <label>Prénom accomp AV/Label le + fréq 6 DM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>