force-app/main/default/objects/Account/fields/Langue__c.field-meta.xml
<CustomField>
    <fullName>Langue__c</fullName>
    <label>Langue Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>