force-app/main/default/objects/Account/fields/Langue_parl_e_par_le_client__c.field-meta.xml
<CustomField>
    <fullName>Langue_parl_e_par_le_client__c</fullName>
    <label>Langue parlée par le client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Français</fullName>
            </value>
            <value>
                <fullName>Néerlandais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>