force-app/main/default/objects/Account/fields/MauvaisComportement__c.field-meta.xml
<CustomField>
    <fullName>MauvaisComportement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mauvais Comportement</label>
    <type>Checkbox</type>
</CustomField>