force-app/main/default/objects/Account/fields/NavNbrFilmsWatchList6Mois__c.field-meta.xml
<CustomField>
    <fullName>NavNbrFilmsWatchList6Mois__c</fullName>
    <label>Nbr films watchlist 6 DM (données RCU)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>