force-app/main/default/objects/Account/fields/NavPlus4VistesSite3Mois__c.field-meta.xml
<CustomField>
    <fullName>NavPlus4VistesSite3Mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>+ de 4 visi site 3 DM (mob,ugc.fr,vlo,…)</label>
    <type>Checkbox</type>
</CustomField>