force-app/main/default/objects/Account/fields/NavVisiteSiteWebDern3Mois__c.field-meta.xml
<CustomField>
    <fullName>NavVisiteSiteWebDern3Mois__c</fullName>
    <label>Visite Web dern 3 DM (mob,ugc.fr,vlo,…)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>