force-app/main/default/objects/Account/fields/NavVisiteSiteWebDern48Heures__c.field-meta.xml
<CustomField>
    <fullName>NavVisiteSiteWebDern48Heures__c</fullName>
    <label>Visite Web dern 48h (mob,ugc.fr,vlo,…)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>