force-app/main/default/objects/Account/fields/NavVisiteSiteWebDernSemaine__c.field-meta.xml
<CustomField>
    <fullName>NavVisiteSiteWebDernSemaine__c</fullName>
    <label>Visite Web dern sem (mob,ugc.fr,vlo,…)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>