force-app/main/default/objects/Account/fields/NbEnfants__c.field-meta.xml
<CustomField>
    <fullName>NbEnfants__c</fullName>
    <label>Nombre d&#39;enfants</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>