force-app/main/default/objects/Account/fields/NbParrainagesFideliteUI__c.field-meta.xml
<CustomField>
    <fullName>NbParrainagesFideliteUI__c</fullName>
    <label>Nombre parrainages Fidélité/UI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>