force-app/main/default/objects/Account/fields/NoCarteFidelite__c.field-meta.xml
<CustomField>
    <fullName>NoCarteFidelite__c</fullName>
    <label>N° Carte Fidélité</label>
    <length>16</length>
    <type>Text</type>
</CustomField>