force-app/main/default/objects/Account/fields/NoCarteFlyingBlue__c.field-meta.xml
<CustomField>
    <fullName>NoCarteFlyingBlue__c</fullName>
    <label>N° de carte Flying Blue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>