force-app/main/default/objects/Account/fields/NoCartes__c.field-meta.xml
<CustomField>
    <fullName>NoCartes__c</fullName>
    <description>Champ qui concatène le numéro de carte UI et fidélité pour le bandeau de la fiche client</description>
    <formula>&quot;N° Carte UI: &quot; + NoCarteUI__c
&amp;  BR()  &amp; 
&quot;N° Carte Fid:&quot; + NoCarteFidelite__c</formula>
    <label>Numéro Cartes</label>
    <type>Text</type>
</CustomField>