force-app/main/default/objects/Account/fields/NoCarteSmiles__c.field-meta.xml
<CustomField>
    <fullName>NoCarteSmiles__c</fullName>
    <label>N° Carte Smiles</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>