force-app/main/default/objects/Account/fields/NoCarteUI__c.field-meta.xml
<CustomField>
    <fullName>NoCarteUI__c</fullName>
    <label>N° Carte UI</label>
    <length>11</length>
    <type>Text</type>
</CustomField>