force-app/main/default/objects/Account/fields/NomVoie__c.field-meta.xml
<CustomField>
    <fullName>NomVoie__c</fullName>
    <label>Nom de la voie</label>
    <length>50</length>
    <type>Text</type>
</CustomField>