force-app/main/default/objects/Account/fields/Note_Client__c.field-meta.xml
<CustomField>
    <fullName>Note_Client__c</fullName>
    <label>Note Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>