force-app/main/default/objects/Account/fields/NoVoie__c.field-meta.xml
<CustomField>
    <fullName>NoVoie__c</fullName>
    <label>N° de la voie</label>
    <length>50</length>
    <type>Text</type>
</CustomField>