force-app/main/default/objects/Account/fields/NPAIEMAIL__c.field-meta.xml
<CustomField>
    <fullName>NPAIEMAIL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPAI_EMAIL</label>
    <type>Checkbox</type>
</CustomField>