force-app/main/default/objects/Account/fields/NPAISMS__c.field-meta.xml
<CustomField>
    <fullName>NPAISMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPAI_SMS</label>
    <type>Checkbox</type>
</CustomField>