force-app/main/default/objects/Account/fields/OffreMoment__c.field-meta.xml
<CustomField>
    <fullName>OffreMoment__c</fullName>
    <formula>IF(  TECH_OffreMoment__c  = 1, IMAGE(&quot;/resource/1509639497000/IconeCible&quot;, &quot;.jpg&quot;, 30, 30),&quot;&quot;)
&amp;
IF( TECH_OffreMoment__c  = 2, IMAGE(&quot;/resource/1509639497000/IconeMarketing2&quot;, &quot;.jpg&quot;, 30, 30),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offre du moment</label>
    <type>Text</type>
</CustomField>