force-app/main/default/objects/Account/fields/OrigineDrapeau__c.field-meta.xml
<CustomField>
    <fullName>OrigineDrapeau__c</fullName>
    <description>Affiche le drapeau du pays selon l&#39;origine du client</description>
    <formula>CASE(ProduitUGC__c, &quot;français&quot;, IMAGE(&quot;/resource/1497278180000/drapeaufrance&quot;,&quot;60,60&quot;) , &quot;belge&quot;,IMAGE(&quot;/resource/1497278159000/drapeaubelgique&quot;,&quot;60,60&quot;), &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>