force-app/main/default/objects/Account/fields/Payeur__c.field-meta.xml
<CustomField>
    <fullName>Payeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payeur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payeur de</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>