force-app/main/default/objects/Account/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>BELGIQUE</fullName>
            </value>
            <value>
                <fullName>AFGHANISTAN</fullName>
            </value>
            <value>
                <fullName>AFRIQUE DU SUD</fullName>
            </value>
            <value>
                <fullName>ALBANIE</fullName>
            </value>
            <value>
                <fullName>ALGERIE</fullName>
            </value>
            <value>
                <fullName>ALLEMAGNE</fullName>
            </value>
            <value>
                <fullName>ANDORRE</fullName>
            </value>
            <value>
                <fullName>ANGOLA</fullName>
            </value>
            <value>
                <fullName>ANGUILLA</fullName>
            </value>
            <value>
                <fullName>ANTILLES NÉERLANDAISES</fullName>
            </value>
            <value>
                <fullName>ARABIE SAOUDITE</fullName>
            </value>
            <value>
                <fullName>ARGENTINE</fullName>
            </value>
            <value>
                <fullName>ARMENIE</fullName>
            </value>
            <value>
                <fullName>AUSTRALIE</fullName>
            </value>
            <value>
                <fullName>AUTRICHE</fullName>
            </value>
            <value>
                <fullName>AZERBAIDJAN</fullName>
            </value>
            <value>
                <fullName>BAHAMAS</fullName>
            </value>
            <value>
                <fullName>BAHREIN</fullName>
            </value>
            <value>
                <fullName>BANGLADESH</fullName>
            </value>
            <value>
                <fullName>BELARUS</fullName>
            </value>
            <value>
                <fullName>BELIZE</fullName>
            </value>
            <value>
                <fullName>BENIN</fullName>
            </value>
            <value>
                <fullName>BERMUDES</fullName>
            </value>
            <value>
                <fullName>BHOUTAN</fullName>
            </value>
            <value>
                <fullName>BOLIVIE, l&#39;ETAT PLURINATIONAL DE</fullName>
            </value>
            <value>
                <fullName>BOSNIE-HERZEGOVINE</fullName>
            </value>
            <value>
                <fullName>BOTSWANA</fullName>
            </value>
            <value>
                <fullName>BRESIL</fullName>
            </value>
            <value>
                <fullName>BRUNEI DARUSSALAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>