force-app/main/default/objects/Account/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IF ( ISPICKVAL(Salutation,&quot;M.&quot;),IMAGE(&quot;/resource/1496840696000/PhotoIdentiteHomme&quot;,&quot;photo&quot;, 80, 70),IMAGE(&quot;/resource/1496840713000/photoidentitefemme&quot;,&quot;photo&quot;, 80, 70))</formula>
    <label>Photo</label>
    <type>Text</type>
</CustomField>