force-app/main/default/objects/Account/fields/PNDADRESSE__c.field-meta.xml
<CustomField>
    <fullName>PNDADRESSE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PND_ADRESSE</label>
    <type>Checkbox</type>
</CustomField>