force-app/main/default/objects/Account/fields/PNDBloctelNpaiEmail__c.field-meta.xml
<CustomField>
    <fullName>PNDBloctelNpaiEmail__c</fullName>
    <description>Quand la case PND et/ou bloctel et/ou est cochée alors l&#39;icône apparaît automatiquement sur le bandeau.</description>
    <formula>IconePND__c 
&amp; &quot; &quot; &amp;
 IconeBloctel__c &amp; &quot; &quot; &amp; 
IconeNPAIEmail__c</formula>
    <label>PND &amp; Bloctel &amp; NPAIEmail</label>
    <type>Text</type>
</CustomField>