force-app/main/default/objects/Account/fields/PorteurEstPayeurAbTiers__c.field-meta.xml
<CustomField>
    <fullName>PorteurEstPayeurAbTiers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Porteur contrat UI est payeur abo tiers</label>
    <type>Checkbox</type>
</CustomField>