force-app/main/default/objects/Account/fields/PrenomEnfant1__c.field-meta.xml
<CustomField>
    <fullName>PrenomEnfant1__c</fullName>
    <label>Prénom enfant 1</label>
    <length>13</length>
    <type>Text</type>
</CustomField>