force-app/main/default/objects/Account/fields/PrenomEnfant2__c.field-meta.xml
<CustomField>
    <fullName>PrenomEnfant2__c</fullName>
    <label>Prénom enfant 2</label>
    <length>13</length>
    <type>Text</type>
</CustomField>