force-app/main/default/objects/Account/fields/PrenomEnfant3__c.field-meta.xml
<CustomField>
    <fullName>PrenomEnfant3__c</fullName>
    <label>Prénom enfant 3</label>
    <length>13</length>
    <type>Text</type>
</CustomField>