force-app/main/default/objects/Account/fields/ProduitUGC__c.field-meta.xml
<CustomField>
    <fullName>ProduitUGC__c</fullName>
    <defaultValue>&quot;français&quot;</defaultValue>
    <label>Pays de résidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>français</fullName>
                <default>true</default>
                <label>français</label>
            </value>
            <value>
                <fullName>belge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>