force-app/main/default/objects/Account/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>CSP (Profession)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>