force-app/main/default/objects/Account/fields/Profilcinephile__c.field-meta.xml
<CustomField>
    <fullName>Profilcinephile__c</fullName>
    <label>Profil cinéphile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>