force-app/main/default/objects/Account/fields/Rebond_commercial__c.field-meta.xml
<CustomField>
    <fullName>Rebond_commercial__c</fullName>
    <label>Rebond commercial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposé - accepté</fullName>
            </value>
            <value>
                <fullName>Proposé - refusé</fullName>
            </value>
            <value>
                <fullName>Non proposé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>