force-app/main/default/objects/Account/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <label>Résidence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>