force-app/main/default/objects/Account/fields/ScoreAntichurn__c.field-meta.xml
<CustomField>
    <fullName>ScoreAntichurn__c</fullName>
    <label>Score antichurn</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>