force-app/main/default/objects/Account/fields/ScoreConversAcheteur5Places__c.field-meta.xml
<CustomField>
    <fullName>ScoreConversAcheteur5Places__c</fullName>
    <label>Score convers° acheteur 5 places</label>
    <length>50</length>
    <type>Text</type>
</CustomField>