force-app/main/default/objects/Account/fields/ScorePotentielConversionFidelise__c.field-meta.xml
<CustomField>
    <fullName>ScorePotentielConversionFidelise__c</fullName>
    <label>Score potentiel conversion en fidélisé</label>
    <length>50</length>
    <type>Text</type>
</CustomField>