force-app/main/default/objects/Account/fields/ScorePotentielConversionUI__c.field-meta.xml
<CustomField>
    <fullName>ScorePotentielConversionUI__c</fullName>
    <label>Score potentiel de conversion en UI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>