force-app/main/default/objects/Account/fields/SDOCcomplement__c.field-meta.xml
<CustomField>
    <fullName>SDOCcomplement__c</fullName>
    <description>champ aidant pour SDOC permet d&#39;afficher différents blocs d&#39;adresses selon si il y a un complément d&#39;adresse ou non</description>
    <formula>IF(ISBLANK( Residence__c )&amp;&amp; ISBLANK( Batiment__c )&amp;&amp; ISBLANK( Appartement__c )&amp;&amp; ISBLANK( Escalier__c) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDOCcomplément</label>
    <type>Checkbox</type>
</CustomField>