force-app/main/default/objects/Account/fields/SlimpayReference2__c.field-meta.xml
<CustomField>
    <fullName>SlimpayReference2__c</fullName>
    <description>reference client dans Slimpay, la reference final est dans le champ formule ReferenceClient qui prend en compte l&#39;environnement DEV,PP,UAT, PROD..etc.</description>
    <displayFormat>{000000000}</displayFormat>
    <label>Slimpay reference2</label>
    <type>AutoNumber</type>
</CustomField>