force-app/main/default/objects/Account/fields/SlimpayReference__c.field-meta.xml
<CustomField>
    <fullName>SlimpayReference__c</fullName>
    <formula>$Label.Slimpay_REF + SlimpayReference2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slimpay reference</label>
    <type>Text</type>
</CustomField>