force-app/main/default/objects/Account/fields/SouDateOptInNLHebdoBonsPlansUgc__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptInNLHebdoBonsPlansUgc__c</fullName>
    <label>Date d&#39;opt-in NL hebdo et bons plans UGC</label>
    <type>DateTime</type>
</CustomField>