force-app/main/default/objects/Account/fields/SouDateOptInNLHebdoBonsPlansUI__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptInNLHebdoBonsPlansUI__c</fullName>
    <label>SouDateOptInNLHebdoBonsPlansUI</label>
    <type>DateTime</type>
</CustomField>