force-app/main/default/objects/Account/fields/SouDateOptInNLMensuelle__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptInNLMensuelle__c</fullName>
    <label>SouDateOptInNLMensuelle</label>
    <type>DateTime</type>
</CustomField>