force-app/main/default/objects/Account/fields/SouDateOptInNLPartenaires__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptInNLPartenaires__c</fullName>
    <label>SouDateOptInNLPartenaires</label>
    <type>DateTime</type>
</CustomField>