force-app/main/default/objects/Account/fields/SouDateOptInNLPartenairesUGC__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptInNLPartenairesUGC__c</fullName>
    <label>SouDateOptInNLPartenairesUGC</label>
    <type>DateTime</type>
</CustomField>