force-app/main/default/objects/Account/fields/SouDateOptInNLPartenairesVLO__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptInNLPartenairesVLO__c</fullName>
    <label>SouDateOptInNLPartenairesVLO</label>
    <type>DateTime</type>
</CustomField>