force-app/main/default/objects/Account/fields/SouDateOptInNLVLO__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptInNLVLO__c</fullName>
    <label>SouDateOptInNLVLO</label>
    <type>DateTime</type>
</CustomField>