force-app/main/default/objects/Account/fields/SouDateOptInSMS__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptInSMS__c</fullName>
    <label>SouDateOptInSMS</label>
    <type>DateTime</type>
</CustomField>