force-app/main/default/objects/Account/fields/SouDateOptOutNLHebdoBonsPlansUgc__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptOutNLHebdoBonsPlansUgc__c</fullName>
    <label>SouDateOptOutNLHebdoBonsPlansUgc</label>
    <type>DateTime</type>
</CustomField>