force-app/main/default/objects/Account/fields/SouDateOptOutNLHebdoBonsPlansUI__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptOutNLHebdoBonsPlansUI__c</fullName>
    <label>SouDateOptOutNLHebdoBonsPlansUI</label>
    <type>DateTime</type>
</CustomField>