force-app/main/default/objects/Account/fields/SouDateOptOutNLMensuelle__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptOutNLMensuelle__c</fullName>
    <label>SouDateOptOutNLMensuelle</label>
    <type>DateTime</type>
</CustomField>