force-app/main/default/objects/Account/fields/SouDateOptOutNLPartenairesUGC__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptOutNLPartenairesUGC__c</fullName>
    <label>SouDateOptOutNLPartenairesUGC</label>
    <type>DateTime</type>
</CustomField>