force-app/main/default/objects/Account/fields/SouDateOptOutNLVLO__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptOutNLVLO__c</fullName>
    <label>SouDateOptOutNLVLO</label>
    <type>DateTime</type>
</CustomField>