force-app/main/default/objects/Account/fields/SouDateOptOutPartenairesVLO__c.field-meta.xml
<CustomField>
    <fullName>SouDateOptOutPartenairesVLO__c</fullName>
    <label>SouDateOptOutPartenairesVLO</label>
    <type>DateTime</type>
</CustomField>