force-app/main/default/objects/Account/fields/SouOptInNLHebdoBonsPlansUgc__c.field-meta.xml
<CustomField>
    <fullName>SouOptInNLHebdoBonsPlansUgc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SouOptInNLHebdoBonsPlansUgc</label>
    <type>Checkbox</type>
</CustomField>