force-app/main/default/objects/Account/fields/SouOptInNLHebdoBonsPlansUI__c.field-meta.xml
<CustomField>
    <fullName>SouOptInNLHebdoBonsPlansUI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SouOptInNLHebdoBonsPlansUI</label>
    <type>Checkbox</type>
</CustomField>