force-app/main/default/objects/Account/fields/SouOptInNLMensuelle__c.field-meta.xml
<CustomField>
    <fullName>SouOptInNLMensuelle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SouOptInNLMensuelle</label>
    <type>Checkbox</type>
</CustomField>